--- a/style.css
+++ b/style.css
@@ -52,3 +52,7 @@
 		padding-top: 2em;
 	}
 
+/* changement de la police du titre du site */ 
+.site-title {
+	font-family: 'Concert One', cursive;
+}
